// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard should render form 1`] = `
<div>
  <div
    style="display: flex; max-height: 800px;"
  >
    <div
      style="width: 1190px; position: relative;"
    >
      <div
        class="StepWizard--main awsConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="40"
                viewBox="0 0 14 10"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connectors.title.ceAws
          </span>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              1
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              2
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.cur
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.req
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.roleARN
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.testConnection.heading
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="awsConnectorOverview"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-large"
                data-cy="aws-overview"
              >
                connectors.ceAws.overview.heading
              </p>
            </div>
            <div
              style="flex: 1;"
            >
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  action="#"
                  class="FormikForm--main"
                >
                  <div>
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <div
                        style="width: 65%;"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer TextInput--main"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <div
                              class="Text--withDocsTooltip"
                              data-tooltip-id="universalInputNameWithId"
                            >
                              <p
                                class="StyledProps--font StyledProps--main"
                              >
                                Id
                              </p>
                            </div>
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              :
                            </p>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-editable-text-content"
                                    style="height: 1px; line-height: 1px; min-width: 0;"
                                  />
                                </div>
                              </span>
                            </span>
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="Edit"
                              style="vertical-align: middle; cursor: pointer;"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="connectorsCeAwsOverViewForm_name"
                              >
                                connectors.name
                              </span>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group dataFields"
                        data-id="awsAccountId-1"
                      >
                        <label
                          class="bp3-label"
                          for="awsAccountId"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="awsAccountId"
                          >
                            connectors.ceAws.overview.awsAccountId
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="awsAccountId"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="description-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="tags-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main govCloudContainer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main govCloudLabel"
                      >
                        connectors.ceAws.overview.govCloudHeader
                      </p>
                      <div
                        class="Layout--horizontal Layout--layout-spacing-huge StyledProps--main StyledProps--margin-top-medium"
                      >
                        <label
                          class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main"
                        >
                          <input
                            checked=""
                            type="radio"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          no
                        </label>
                        <label
                          class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main"
                        >
                          <input
                            type="radio"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          yes
                        </label>
                      </div>
                    </div>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main buttonPanel"
                    >
                      <button
                        aria-label="continue"
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          continue
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                          icon="chevron-right"
                        >
                          <svg
                            data-icon="chevron-right"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-right
                            </desc>
                            <path
                              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <span
          class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
          data-icon="harness-with-color"
        >
          <svg
            height="346"
            viewBox="0 0 25 25"
            width="346"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 2`] = `
<div>
  <div
    style="display: flex; max-height: 800px;"
  >
    <div
      style="width: 1190px; position: relative;"
    >
      <div
        class="StepWizard--main awsConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="40"
                viewBox="0 0 14 10"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connectors.title.ceAws
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              2
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.cur
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.req
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.roleARN
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.testConnection.heading
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="awsConnectorCUR"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-large"
              >
                connectors.ceAws.cur.heading
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-variation-body StyledProps--margin-bottom-large"
            >
              connectors.ceAws.cur.subheading
            </p>
            <div
              class="StyledProps--font StyledProps--main instructionPanel"
            >
              <ol
                class="instructionList"
              >
                <li
                  class="btnInstruction"
                >
                  <button
                    aria-label="connectors.ceAws.cur.launchTemplate"
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-secondary Button--size Button--small"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      connectors.ceAws.cur.launchTemplate
                    </span>
                    <span
                      class="bp3-icon StyledProps--main StyledProps--margin-left-xsmall"
                      data-icon="main-share"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 14 14"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.5 12.6H1.4V3.5h6.1l1.4-1.4H.7c-.4 0-.7.3-.7.7v10.5c0 .4.3.7.7.7h10.5c.4 0 .7-.3.7-.7V5.1l-1.4 1.4zM13.3 0H8.4c-.4 0-.7.3-.7.7s.3.7.7.7h3.2L6.5 6.5c-.1.1-.2.3-.2.5 0 .4.3.7.7.7.2 0 .4-.1.5-.2l5.1-5.1v3.2c0 .4.3.7.7.7s.7-.3.7-.7V.7c0-.4-.3-.7-.7-.7z"
                          fill="#4d5969"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="undefined"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey800"
                  >
                    connectors.ceAws.cur.instructions.i1
                  </p>
                </li>
                <li
                  class="undefined"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey800"
                  >
                    connectors.ceAws.cur.instructions.i2
                    <a
                      href="https://docs.harness.io/article/80vbt5jv0q-set-up-cost-visibility-for-aws#step_2_cost_and_usage_report"
                      rel="noreferrer"
                      target="_blank"
                    >
                      connectors.ceAws.cur.instructions.i3
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
                        data-icon="main-share"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 14 14"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10.5 12.6H1.4V3.5h6.1l1.4-1.4H.7c-.4 0-.7.3-.7.7v10.5c0 .4.3.7.7.7h10.5c.4 0 .7-.3.7-.7V5.1l-1.4 1.4zM13.3 0H8.4c-.4 0-.7.3-.7.7s.3.7.7.7h3.2L6.5 6.5c-.1.1-.2.3-.2.5 0 .4.3.7.7.7.2 0 .4-.1.5-.2l5.1-5.1v3.2c0 .4.3.7.7.7s.7-.3.7-.7V.7c0-.4-.3-.7-.7-.7z"
                            fill="#4d5969"
                          />
                        </svg>
                      </span>
                    </a>
                  </p>
                </li>
                <li
                  class="undefined"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey800"
                  >
                    connectors.ceAws.cur.instructions.i4
                  </p>
                </li>
              </ol>
            </div>
            <div
              style="flex: 1;"
            >
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  action="#"
                  class="FormikForm--main"
                >
                  <div>
                    <div>
                      <div
                        class="bp3-form-group dataFields"
                        data-id="reportName-0"
                      >
                        <label
                          class="bp3-label"
                          for="reportName"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="reportName"
                          >
                            connectors.ceAws.cur.reportName
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="reportName"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group dataFields"
                        data-id="s3BucketName-1"
                      >
                        <label
                          class="bp3-label"
                          for="s3BucketName"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="s3BucketName"
                          >
                            connectors.ceAws.cur.bucketName
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="s3BucketName"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <a
                        class="noAccountLink"
                        href="https://newdocs.helpdocs.io/article/80vbt5jv0q-set-up-cost-visibility-for-aws#review_aws_access_permissions"
                        rel="noreferrer"
                        target="_blank"
                      >
                        connectors.ceAws.cur.noAccountLink
                      </a>
                    </div>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
                    >
                      <button
                        aria-label="previous"
                        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                          icon="chevron-left"
                        >
                          <svg
                            data-icon="chevron-left"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-left
                            </desc>
                            <path
                              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          previous
                        </span>
                      </button>
                      <button
                        aria-label="continue"
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          continue
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                          icon="chevron-right"
                        >
                          <svg
                            data-icon="chevron-right"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-right
                            </desc>
                            <path
                              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <span
          class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
          data-icon="harness-with-color"
        >
          <svg
            height="346"
            viewBox="0 0 25 25"
            width="346"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 3`] = `
<div>
  <div
    style="display: flex; max-height: 800px;"
  >
    <div
      style="width: 1190px; position: relative;"
    >
      <div
        class="StepWizard--main awsConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="40"
                viewBox="0 0 14 10"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connectors.title.ceAws
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.cur
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.req
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.roleARN
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.testConnection.heading
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="awsConnectorRequirements"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h4 StyledProps--margin-bottom-large"
              >
                connectors.ceAws.crossAccountRoleStep1.heading
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-variation-body2"
            >
              connectors.ceAws.crossAccountRoleStep1.description
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-variation-body2 StyledProps--padding-top-small"
            >
              connectors.ceAws.crossAccountRoleStep1.info
            </p>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--margin-top-large"
              >
                <div
                  class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox cardCtn StyledProps--main"
                    >
                      <input
                        checked=""
                        disabled=""
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <img
                        height="16"
                        src="test-file-stub"
                      />
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small StyledProps--margin-left-xsmall"
                      >
                        <span>
                          connectors.ceAws.crossAccountRoleStep1.cards.costVisibility.header
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox cardCtn StyledProps--main"
                    >
                      <input
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <img
                        height="16"
                        src="test-file-stub"
                      />
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small StyledProps--margin-left-xsmall"
                      >
                        <span>
                          connectors.ceAws.crossAccountRoleStep1.cards.inventoryManagement.header
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox cardCtn StyledProps--main"
                    >
                      <input
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <img
                        height="16"
                        src="test-file-stub"
                      />
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small StyledProps--margin-left-xsmall"
                      >
                        <span>
                          connectors.ceAws.crossAccountRoleStep1.cards.autoStopping.header
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main featureDetailsCtn"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                    style="align-items: center;"
                  >
                    <img
                      src="test-file-stub"
                      width="32"
                    />
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main featurePrefix StyledProps--color StyledProps--color-grey900"
                      >
                        common.aws
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey900"
                        style="font-weight: 500;"
                      >
                        connectors.costVisibility
                      </p>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-small-bold StyledProps--margin-bottom-xsmall"
                    >
                      connectors.ceAws.crossAccountRoleStep1.cards.permissionsInvolved
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--color StyledProps--color-grey600"
                      style="display: flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-tick StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green700 StyledProps--margin-right-small"
                        icon="tick"
                      >
                        <svg
                          data-icon="tick"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            tick
                          </desc>
                          <path
                            d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      connectors.ceAws.crossAccountRoleStep1.default.feat1
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--color StyledProps--color-grey600"
                      style="display: flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-tick StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green700 StyledProps--margin-right-small"
                        icon="tick"
                      >
                        <svg
                          data-icon="tick"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            tick
                          </desc>
                          <path
                            d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      connectors.ceAzure.chooseRequirements.billing.feat2
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--color StyledProps--color-grey600"
                      style="display: flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-tick StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green700 StyledProps--margin-right-small"
                        icon="tick"
                      >
                        <svg
                          data-icon="tick"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            tick
                          </desc>
                          <path
                            d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      connectors.ceAzure.chooseRequirements.billing.feat3
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--color StyledProps--color-grey600"
                      style="display: flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-tick StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green700 StyledProps--margin-right-small"
                        icon="tick"
                      >
                        <svg
                          data-icon="tick"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            tick
                          </desc>
                          <path
                            d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      connectors.ceAzure.chooseRequirements.billing.feat4
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--color StyledProps--color-grey600"
                      style="display: flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-tick StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green700 StyledProps--margin-right-small"
                        icon="tick"
                      >
                        <svg
                          data-icon="tick"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            tick
                          </desc>
                          <path
                            d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      connectors.ceAzure.chooseRequirements.billing.feat5
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-small-bold StyledProps--margin-bottom-xsmall"
                    >
                      connectors.ceAws.crossAccountRoleStep1.cards.providedBy
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--color StyledProps--color-grey600"
                    >
                      <span>
                        connectors.ceAws.crossAccountRoleStep1.cards.costVisibility.footer
                      </span>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
              >
                <button
                  aria-label="previous"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    previous
                  </span>
                </button>
                <button
                  aria-label="continue"
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <span
          class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
          data-icon="harness-with-color"
        >
          <svg
            height="346"
            viewBox="0 0 25 25"
            width="346"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 4`] = `
<div>
  <div
    style="display: flex; max-height: 800px;"
  >
    <div
      style="width: 1190px; position: relative;"
    >
      <div
        class="StepWizard--main awsConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="40"
                viewBox="0 0 14 10"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connectors.title.ceAws
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.cur
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.req
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.roleARN
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.testConnection.heading
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="awsConnectorCreateRole"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-large"
              >
                connectors.ceAws.crossAccountRoleStep2.heading
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-variation-body StyledProps--margin-bottom-large"
            >
              connectors.ceAws.crossAccountRoleStep2.subHeading
            </p>
            <div
              class="StyledProps--font StyledProps--main instructionPanel"
            >
              <ol
                class="instructionList"
              >
                <li
                  class="undefined"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey800"
                  >
                    connectors.ceAws.crossAccountRoleStep2.instructions.i1
                    <button
                      aria-label="connectors.ceAws.crossAccountRoleStep2.launchTemplate"
                      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-secondary Button--size Button--small"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        connectors.ceAws.crossAccountRoleStep2.launchTemplate
                      </span>
                      <span
                        class="bp3-icon StyledProps--main StyledProps--margin-left-xsmall"
                        data-icon="main-share"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 14 14"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10.5 12.6H1.4V3.5h6.1l1.4-1.4H.7c-.4 0-.7.3-.7.7v10.5c0 .4.3.7.7.7h10.5c.4 0 .7-.3.7-.7V5.1l-1.4 1.4zM13.3 0H8.4c-.4 0-.7.3-.7.7s.3.7.7.7h3.2L6.5 6.5c-.1.1-.2.3-.2.5 0 .4.3.7.7.7.2 0 .4-.1.5-.2l5.1-5.1v3.2c0 .4.3.7.7.7s.7-.3.7-.7V.7c0-.4-.3-.7-.7-.7z"
                            fill="#4d5969"
                          />
                        </svg>
                      </span>
                    </button>
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey800"
                  >
                    connectors.ceAws.crossAccountRoleStep2.instructions.i2
                    <a
                      href=""
                      rel="noreferrer"
                      target="_blank"
                    >
                      connectors.ceAws.crossAccountRoleStep2.instructions.templateRedirection
                    </a>
                    .)
                  </p>
                </li>
                <li
                  class="instructionList"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey800"
                  >
                    connectors.ceAws.crossAccountRoleStep2.instructions.i3
                  </p>
                </li>
                <li
                  class="instructionList"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey800"
                  >
                    connectors.ceAws.cur.instructions.i2
                    <a
                      href="https://docs.harness.io/article/80vbt5jv0q-set-up-cost-visibility-for-aws#step_4_create_cross_account_role"
                      rel="noreferrer"
                      target="_blank"
                    >
                      connectors.ceAws.crossAccountRoleStep2.instructions.i4
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
                        data-icon="main-share"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 14 14"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10.5 12.6H1.4V3.5h6.1l1.4-1.4H.7c-.4 0-.7.3-.7.7v10.5c0 .4.3.7.7.7h10.5c.4 0 .7-.3.7-.7V5.1l-1.4 1.4zM13.3 0H8.4c-.4 0-.7.3-.7.7s.3.7.7.7h3.2L6.5 6.5c-.1.1-.2.3-.2.5 0 .4.3.7.7.7.2 0 .4-.1.5-.2l5.1-5.1v3.2c0 .4.3.7.7.7s.7-.3.7-.7V.7c0-.4-.3-.7-.7-.7z"
                            fill="#4d5969"
                          />
                        </svg>
                      </span>
                    </a>
                  </p>
                </li>
                <li
                  class="instructionList"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey800"
                  >
                    connectors.ceAws.crossAccountRoleStep2.instructions.i5
                  </p>
                </li>
              </ol>
            </div>
            <div
              style="flex: 1;"
            >
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  action="#"
                  class="FormikForm--main"
                >
                  <div>
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <div
                        class="bp3-form-group dataFields"
                        data-id="crossAccountRoleArn-0"
                      >
                        <label
                          class="bp3-label"
                          for="crossAccountRoleArn"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="crossAccountRoleArn"
                          >
                            connectors.ceAws.crossAccountRoleStep2.roleArn
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="crossAccountRoleArn"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group dataFields"
                        data-id="externalId-1"
                      >
                        <label
                          class="bp3-label"
                          for="externalId"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="externalId"
                          >
                            connectors.ceAws.crossAccountRoleStep2.extId
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="externalId"
                              type="text"
                              value="harness:108817434118:kmpySmUISimoRrJL6NL73w"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <a
                      class="noAccountLink"
                      href="https://newdocs.helpdocs.io/article/80vbt5jv0q-set-up-cost-visibility-for-aws#review_aws_access_permissions"
                      rel="noreferrer"
                      target="_blank"
                    >
                      connectors.ceAws.crossAccountRoleStep2.dontHaveAccess
                    </a>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
                    >
                      <button
                        aria-label="previous"
                        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                          icon="chevron-left"
                        >
                          <svg
                            data-icon="chevron-left"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-left
                            </desc>
                            <path
                              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          previous
                        </span>
                      </button>
                      <button
                        aria-label="saveAndContinue"
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          saveAndContinue
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                          icon="chevron-right"
                        >
                          <svg
                            data-icon="chevron-right"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-right
                            </desc>
                            <path
                              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <span
          class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
          data-icon="harness-with-color"
        >
          <svg
            height="346"
            viewBox="0 0 25 25"
            width="346"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 5`] = `
<div>
  <div
    style="display: flex; max-height: 800px;"
  >
    <div
      style="width: 1190px; position: relative;"
    >
      <div
        class="StepWizard--main awsConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="40"
                viewBox="0 0 14 10"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connectors.title.ceAws
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.cur
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.req
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.steps.roleARN
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 200px;"
            >
              connectors.ceAws.testConnection.heading
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey800"
              >
                connectors.stepThreeName
              </p>
              <div
                class="StyledProps--font StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
                  id="steps-progress"
                >
                  <div
                    class="StepsProgress--progressBar"
                  >
                    <div
                      class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
                    >
                      <div
                        class="bp3-progress-meter"
                        style="width: 100%;"
                      />
                    </div>
                  </div>
                  <div
                    class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
                  >
                    <div
                      class="StepsProgress--stepWrap"
                    >
                      <span
                        class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                        icon="error"
                      >
                        <svg
                          data-icon="error"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            error
                          </desc>
                          <path
                            d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <div
                        class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                        style=""
                      >
                        <div
                          class="Layout--vertical StyledProps--main"
                          style="width: 100%;"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                          >
                            
                          </p>
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                          >
                            connectors.testConnectionStep.placeholderError
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
            >
              <button
                aria-label="finish"
                class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--variation Button--variation-secondary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div
                  class="bp3-spinner bp3-button-spinner"
                >
                  <div
                    class="bp3-spinner-animation"
                  >
                    <svg
                      height="20"
                      stroke-width="16.00"
                      viewBox="-3.00 -3.00 106.00 106.00"
                      width="20"
                    >
                      <path
                        class="bp3-spinner-track"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      />
                      <path
                        class="bp3-spinner-head"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        pathLength="280"
                        stroke-dasharray="280 280"
                        stroke-dashoffset="210"
                      />
                    </svg>
                  </div>
                </div>
                <span
                  class="bp3-button-text"
                >
                  finish
                </span>
              </button>
            </div>
          </div>
        </div>
        <span
          class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
          data-icon="harness-with-color"
        >
          <svg
            height="346"
            viewBox="0 0 25 25"
            width="346"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
